2004-12-09  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtklabel.c (gtk_label_class_init): Fix a property
	nick typo. 

	* gtk/gtkfilechooserdefault.c: Apply a patch to reset the 
	filter if an otherwise invisible file is selected via the 
	location popup.  (#159896, Carlos Garnacho Parro)

	Fix #145463, reported by Michael Natterer.
	
	* gtk/gtkcellrenderer.h (struct _GtkCellRenderer): Add an
	editing flag to keep track of when editing is done.
	
	* gtk/gtkcellrenderer.h:
	* gtk/gtkcellrenderer.c (gtk_cell_renderer_stop_editing): New
	function to replace gtk_cell_renderer_editing_canceled(). 
	Deprecate gtk_cell_renderer_editing_canceled(). 

	* gtk/gtkcellrenderertext.c (gtk_cell_renderer_text_editing_done): 
	* gtk/gtkcellrenderercombo.c (gtk_cell_renderer_combo_editing_done): 
	* gtk/gtktreeview.c (gtk_tree_view_stop_editing):
	Use gtk_cell_renderer_stop_editing().
	
2004-12-09  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkliststore.h: 
	* gtk/gtkliststore.c (gtk_list_store_insert_with_values): 
	(gtk_list_store_insert_with_valuesv): Add functions which allow
	faster insertion of rows in sorted list stores.  (#160063)

2004-12-08  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkcombobox.c (gtk_combo_box_set_wrap_width): Fix a typo
	in the docs.  (#160826, Jay Camp)

2004-12-08  Federico Mena Quintero  <federico@ximian.com>

	Merged from gtk-2-4:

	* gtk/gtkfilechooserdefault.c (pending_op_process): Center the
	selected row so that it's easily visible.

2004-12-08  Matthias Clasen  <mclasen@redhat.com>

	Fix #111031, reported by Padraig O'Briain:
	
	* gtk/gtktextlayout.h: 
	* gtk/gtktextlayout.c (gtk_text_layout_get_iter_at_position): 
	Add a variant of gtk_text_layout_get_iter_at_pixel() which
	returns the character at the position, not the closest
	cursor position.

	* gtk/gtktextview.h: 
	* gtk/gtktextview.c (gtk_text_view_get_iter_at_position): 
	Add a variant of gtk_text_view_get_iter_at_location() which